--- a/package.json
+++ b/package.json
@@ -1,62 +1,22 @@
 {
-  "name": "jewellery-shop",
-  "version": "0.1.0",
-  "private": true,
+  "name": "Jewellery-shop",
+  "version": "1.0.0",
+  "main": "server.js",
+  "license": "MIT",
   "scripts": {
-    "start": "run-p start:* ",
-    "start-silent": "run-p start > /dev/null",
-    "start:react": "react-scripts start",
-    "start-and-test": "run-p start-silent test ",
-    "build": "react-scripts build",
-    "test": "react-scripts test --noStackTrace",
-    "test-all": "react-scripts test --watchAll=false --noStackTrace",
-    "test-related": "react-scripts test --watchAll=false --noStackTrace --findRelatedTests",
-    "eject": "react-scripts eject"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.js": [
-      "yarn test-related --",
-      "eslint"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "npm-run-all start:*",
+    "start:server": "nodemon server.js",
+    "start:client": "cd client && npm run start",
+    "build": "cd client && npm install && npm run build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
-    "axios": "^0.19.0",
-    "clsx": "^1.0.4",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "node-sass": "^4.13.0",
+    "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "5.7.1",
+    "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-test-renderer": "^16.12.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
-  },
-  "devDependencies": {
-    "husky": "^3.1.0",
-    "lint-staged": "^9.4.3",
-    "redux-devtools-extension": "^2.13.8"
+    "onchange": "6.1.0"
   }
 }
