--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -46,6 +47,6 @@
   "devDependencies": {
     "husky": "^3.1.0",
     "lint-staged": "^9.4.3",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.9"
   }
 }
