--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start": "npm-run-all start:*",
-    "start:server": "nodemon server.js",
-    "start:client": "cd client && npm run start",
+    "start": "set NODE_ENV='production' && node server.js",
+    "start-dev": "npm-run-all -l -p start:*",
+    "start:server": "set NODE_ENV='dev' && ./node_modules/.bin/nodemon server.js",
+    "start:client": "cd client && npm start",
     "build": "cd client && npm install && npm run build"
   },
   "dependencies": {
@@ -14,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "5.7.1",
-    "nodemon": "^1.19.1",
+    "mongo-sanitize": "1.0.1",
+    "mongodb": "3.3.2",
+    "mongoose": "^6.0.12",
+    "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
     "onchange": "6.1.0"
   }
