--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,8 @@
     "react-scripts": "3.2.0",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "husky": "^3.1.0",
