--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-dev": "npm-run-all -l -p start:*",
     "start:server": "set NODE_ENV='dev' && ./node_modules/.bin/nodemon server.js",
     "start:client": "cd client && npm start",
-    "build": "cd client && npm install && npm run build"
+    "build": "cd client && yarn install && yarn build"
   },
   "dependencies": {
     "connect-mongo": "^4.6.0",
@@ -21,6 +21,7 @@
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
-    "onchange": "6.1.0"
+    "onchange": "6.1.0",
+    "yarn": "^1.22.10"
   }
 }
