--- a/client/package.json
+++ b/client/package.json
@@ -43,11 +43,10 @@
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "yarn": "^1.22.10"
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "husky": "^3.1.0",
-    "lint-staged": "^9.4.3",
-    "redux-devtools-extension": "^2.13.9"
+    "lint-staged": "^9.4.3"
   }
 }
